--- a/website/main/templates/main/article.html
+++ b/website/main/templates/main/article.html
@@ -1,4 +1,5 @@
 <h1>{{ article.title}}</h1><br>
 <h3>{{ article.summary}}<h3><br>
+<img src="{{ article.img_url }}">
 <p>{{ article.content}}</p><br>
 <p>{{ article.author.username }} ----- {{article.date_created}}</p>
